--- a/mypicktest/build.gradle
+++ b/mypicktest/build.gradle
@@ -33,4 +33,8 @@ dependencies {
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     testCompile 'junit:junit:4.12'
     compile project(':photopick')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'jp.wasabeef:glide-transformations:3.0.1'
+    // If you want to use the GPU Filters
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
 }
