--- a/photopick/build.gradle
+++ b/photopick/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     }
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     testCompile 'junit:junit:4.12'
+    compile 'me.shaohui.advancedluban:library:1.3.5'
 }
