--- a/photopick/src/main/AndroidManifest.xml
+++ b/photopick/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             ></activity>
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="photopicktalk.provider"
+            android:authorities="photopickfire.provider"
             android:exported="false"
             android:grantUriPermissions="true"
             >
